--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -22,7 +22,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0",
-    "variants": "^0.3.3"
+    "variants": "^0.3.3",
+    "vite": "^6.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -39,7 +40,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^6.2.4"
+    "typescript-eslint": "^8.11.0"
+    
   }
 }
